@@ -1,10 +1,10 @@
 package Net::DNS::Resolver;
 
 #
-# $Id: Resolver.pm 1260 2014-09-09 09:12:28Z willem $
+# $Id: Resolver.pm 1263 2014-09-15 12:56:22Z willem $
 #
 use vars qw($VERSION);
-$VERSION = (qw$LastChangedRevision: 1260 $)[1];
+$VERSION = (qw$LastChangedRevision: 1263 $)[1];
 
 =head1 NAME
 
@@ -18,23 +18,11 @@ use strict;
 use vars qw(@ISA);
 
 BEGIN {
-	for ($^O) {				## Perl OS identifier
-
-		/cygwin/ && do {
-			if ( eval "require Net::DNS::Resolver::MSWin32;" ) {
-				@ISA = qw(Net::DNS::Resolver::MSWin32);
-				last;
-			}
-		};
-
-		if ( eval "require Net::DNS::Resolver::$_;" ) {
-			@ISA = ("Net::DNS::Resolver::$_");
-			last;
-		}
-
-		require Net::DNS::Resolver::UNIX;
-		@ISA = qw(Net::DNS::Resolver::UNIX);
+	for ( $^O, 'UNIX' ) {
+		my $class = join '::', __PACKAGE__, $_;
+		return @ISA = ($class) if eval "require $class;";
 	}
+	die 'failed to load platform specific resolver component';
 }
 
 
