@@ -1,7 +1,14 @@
-$Id: Changes 1257 2014-09-02 12:33:05Z willem $                       -*-text-*-
+$Id: Changes 1263 2014-09-15 12:56:22Z willem $                       -*-text-*-
 
 
 **** 0.80 [unreleased]
+
+Removal of Win32::IPHelper support with cygwin
+
+	Resolvers on Cygwin can get their DNS configuration from the
+	registry directly via the /proc filesystem.  Getting rid of
+	the other method reduces dependencies and makes installations
+	less error prone.
 
 Rework rt.cpan.org #96119
 
